[tool.poetry]
name = "sf-spots-backend"
version = "0.1.0"
description = "FastAPI backend for SF Spots application"
authors = ["Devin <devin@example.com>"]
readme = "README.md"
packages = [
    { include = "sf-spots-backend" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.0"
uvicorn = "0.27.0"
sqlalchemy = "2.0.25"
psycopg2-binary = "2.9.9"
python-dotenv = "1.0.0"
websockets = "12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
